--- a/tmux.conf
+++ b/tmux.conf
@@ -3,30 +3,35 @@ unbind C-b
 set-option -g prefix M-a
 bind M-a send-prefix
 
+# reloada tmux config
+bind r source-file ~/.tmux.conf \; display-message "Config reloaded!"
+
+# Use Y to copy selection in copy mode (like Vim's 'y')
+#bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -sel clipboard -i"
+
 # Enable Vim-like keybindings in copy mode
 setw -g mode-keys vi 
 
+# mouse
+set -g mouse on
+
 # Use vim style keys for selecting panes
-bind -n C-h select-pane -L
-bind -n C-j select-pane -D
-bind -n C-k select-pane -U
-bind -n C-l select-pane -R
+#bind -n C-j select-pane -D
+#bind -n C-h select-pane -L
+#bind -n C-k select-pane -U
+#bind -n C-l select-pane -R
 
 # Use Alt-h/j/k/l to resize panes
-bind -n M-H resize-pane -L 5
-bind -n M-J resize-pane -D 5
-bind -n M-K resize-pane -U 5
-bind -n M-L resize-pane -R 5
-
-# Use Y to copy selection in copy mode (like Vim's 'y')
-bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -sel clipboard -i"
-
-# Reload TMUX environment
-bind r source-file ~/.tmux.conf \; display-message "Config reloaded!"
+bind -n C-M-h resize-pane -L 5
+bind -n C-M-j resize-pane -D 5
+bind -n C-M-k resize-pane -U 5
+bind -n C-M-l resize-pane -R 5
 
 # Split panes using | and -
-bind h split-window -h
-bind v split-window -v
+bind | split-window -h
+bind - split-window -v
+
+
 
 # Status bar customization
 set -g status-bg black
@@ -36,11 +41,28 @@ set -g status-right-length 150
 set -g status-left '#[fg=green]#S #[fg=white]'
 set -g status-right '#[fg=yellow]%Y-%m-%d #[fg=green]%H:%M:%S #[fg=white]'
 
-# Make mouse useful
-set -g mouse on
-
-
 
 # Improve colors
-set -g default-terminal "screen-256color"
+#set -g default-terminal "screen-256color"
 
+
+# addition for vim-tmux-navigator -------------------------------------------------------
+# Smart pane switching with awareness of Vim splits.
+# See: https://github.com/christoomey/vim-tmux-navigator
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|l?n?vim?x?|fzf)(diff)?$'"
+bind-key -n 'C-h' if-shell "$is_vim" 'send-keys C-h'  'select-pane -L'
+bind-key -n 'C-j' if-shell "$is_vim" 'send-keys C-j'  'select-pane -D'
+bind-key -n 'C-k' if-shell "$is_vim" 'send-keys C-k'  'select-pane -U'
+bind-key -n 'C-l' if-shell "$is_vim" 'send-keys C-l'  'select-pane -R'
+tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
+if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
+    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\'  'select-pane -l'"
+if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
+    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\\\'  'select-pane -l'"
+
+bind-key -T copy-mode-vi 'C-h' select-pane -L
+bind-key -T copy-mode-vi 'C-j' select-pane -D
+bind-key -T copy-mode-vi 'C-k' select-pane -U
+bind-key -T copy-mode-vi 'C-l' select-pane -R
+bind-key -T copy-mode-vi 'C-\' select-pane -l
